# mod-tempdir

./: CHANGELOG.md  Cargo.toml  README.md  REPS.md  clippy.toml
.github/workflows/: ci.yml
examples/: basic.rs
src/: cleanup.rs  lib.rs  named_file.rs
tests/: cleanup_orphans.rs  coexistence.rs  concurrent_create.rs  mod_rand_integration.rs  named_file_concurrent.rs  named_file_smoke.rs  named_file_windows_lock.rs  persist_atomic.rs  smoke.rs
