[package]
name = "mod-tempdir"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "Temporary directory and file management for Rust. Auto-cleanup on Drop, collision-resistant naming, orphan cleanup, cross-platform paths. Zero runtime deps by default; opt-in mod-rand feature for uniformly distributed naming. tempfile replacement at MSRV 1.75."

keywords = [
    "tempfile",
    "tempdir",
    "temporary",
    "filesystem",
    "raii"
]

categories = [
    "filesystem",
    "development-tools::testing"
]

documentation = "https://docs.rs/mod-tempdir"
repository = "https://github.com/jamesgober/mod-tempdir"
homepage = "https://github.com/jamesgober/mod-tempdir"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
mod-rand = { version = "0.9.5", optional = true, default-features = false, features = ["tier2"] }

[dev-dependencies]

[features]
default = []
# Use `mod_rand::tier2::unique_name` for directory naming. Adds one
# optional dependency (`mod-rand`, zero further transitive deps). Off
# by default to preserve the v0.1.0 zero-runtime-dep promise.
mod-rand = ["dep:mod-rand"]

[profile.release]
opt-level = 3
lto = "thin"
